# MCF

./: .gitignore  MCFLicense.txt  README  README.md  build_i686_debug.sh  build_i686_release.sh  build_x86_64_debug.sh  build_x86_64_release.sh
MCF/: MCFBuild.mcfproj  Makefile.am  StdMCF.hpp  configure.ac  main.cpp  make-release.cmd  make.cmd
MCF/BinaryToText/: Base64.cpp  Base64.hpp  Hex.cpp  Hex.hpp
MCF/Components/: EventDriver.cpp  EventDriver.hpp  Notation.cpp  Notation.hpp  NotationClass.cpp  NotationClass.hpp  TExpression.cpp  TExpression.hpp  TextFileStream.cpp  TextFileStream.hpp
MCF/Compression/: Lzma.cpp  Lzma.hpp  Z.cpp  Z.hpp
MCF/Containers/: CircularQueue.hpp  DefaultAllocator.hpp  Deque.hpp  FlatMap.hpp  FlatMultiMap.hpp  FlatMultiSet.hpp  FlatSet.hpp  List.hpp  MultiIndexMap.hpp  MultiIndexedMap.hpp  RingQueue.hpp  StaticVector.hpp  StreamBuffer.cpp  StreamBuffer.hpp  VList.hpp  VVector.hpp  Vector.hpp  _Enumerator.hpp  _EnumeratorTemplate.hpp  _FlatBst.hpp  _FlatContainer.hpp
MCF/Core/: Argv.cpp  Argv.hpp  Array.hpp  ArrayObserver.hpp  ArrayView.hpp  CRC32.cpp  CRC32.hpp  Clocks.hpp  CriticalSection.cpp  CriticalSection.hpp  DefaultDeleter.hpp  DynamicLinkLibrary.cpp  DynamicLinkLibrary.hpp  Event.cpp  Event.hpp  EventDriver.cpp  EventDriver.hpp  Exception.cpp  Exception.hpp  File.cpp  File.hpp  FixedSizeAllocator.hpp  Format.hpp  Formatters.hpp  IntrusivePtr.hpp  LastError.cpp  LastError.hpp  Manipulaters.hpp  Matrix.hpp  Message.cpp  Message.hpp  MessageDriver.cpp  MessageDriver.hpp  MultiIndexedMap.hpp  Mutex.cpp  Mutex.hpp  NoCopy.hpp  Optional.hpp  Print.hpp  RAIIWrapper.hpp  (+59 more)
MCF/DllRoot/: DllRoot.cpp  DllRoot.h
MCF/Encryption/: RC4Ex.cpp  RC4Ex.hpp
MCF/ExeRoot/: ExeRoot.cpp  ExeRoot.h
MCF/File/: File.cpp  File.hpp  Utf8TextFile.cpp  Utf8TextFile.hpp
MCF/Function/: Bind.hpp  BlackHole.hpp  Casters.hpp  Comparators.hpp  Function.hpp  FunctionObserver.hpp  FunctionView.hpp  RefWrapper.hpp  ReferenceWrapper.hpp  WhiteHole.hpp  _ForwardedParam.hpp  _MagicalInvoker.hpp
MCF/Hash/: CRC32.cpp  CRC32.hpp  Crc32.cpp  Crc32.hpp  Crc64.cpp  Crc64.hpp  Fnv32.cpp  Fnv32.hpp  Fnv64.cpp  Fnv64.hpp  MD5.cpp  MD5.hpp  Md5.cpp  Md5.hpp  SHA1.cpp  SHA1.hpp  SHA256.cpp  SHA256.hpp  Sha1.cpp  Sha1.hpp  Sha256.cpp  Sha256.hpp
MCF/Interoperation/: TExpression.cpp  TExpression.hpp
MCF/Language/: MNotation.cpp  MNotation.hpp  Notation.cpp  Notation.hpp  TExpression.cpp  TExpression.hpp
MCF/Languages/: MNotation.cpp  MNotation.hpp  TExpression.cpp  TExpression.hpp
MCF/MCFCRT/: MCFBuild.mcfproj  MCFCRT.c  MCFCRT.h
MCF/Networking/: HttpClient.cpp  HttpClient.hpp  PeerInfo.cpp  PeerInfo.hpp  TcpClient.cpp  TcpClient.hpp  TcpPeer.cpp  TcpPeer.hpp  TcpServer.cpp  TcpServer.hpp  UdpClient.cpp  UdpClient.hpp  UdpPacket.cpp  UdpPacket.hpp  UdpServer.cpp  UdpServer.hpp  _NetworkingUtils.hpp  _SocketUtils.hpp
MCF/Random/: FastGenerator.cpp  FastGenerator.hpp  IsaacGenerator.cpp  IsaacGenerator.hpp  IsaacRng.cpp  IsaacRng.hpp  RandomSeed.cpp  RandomSeed.hpp
MCF/Serialization/: DataBuffer.cpp  DataBuffer.hpp  Deserializer.hpp  Serdes.cpp  Serdes.hpp  SerdesDecl.hpp  Serdes_array.hpp  Serdes_bitset.hpp  Serdes_deque.hpp  Serdes_forward_list.hpp  Serdes_list.hpp  Serdes_map.hpp  Serdes_set.hpp  Serdes_tuple.hpp  Serdes_unordered_map.hpp  Serdes_unordered_set.hpp  Serdes_vector.hpp  Serializer.hpp  VarIntEx.hpp  _SerdesTraits.cpp  _SerdesTraits.hpp
MCF/SmartPointers/: CopyOnWriteIntrusivePtr.hpp  CopyOnWritePtr.hpp  CopyOnWriteSharedPtr.hpp  DefaultDeleter.hpp  IntrusivePtr.cpp  IntrusivePtr.hpp  PolyIntrusivePtr.cpp  PolyIntrusivePtr.hpp  PolymorphicIntrusivePtr.cpp  PolymorphicIntrusivePtr.hpp  PolymorphicSharedPtr.cpp  PolymorphicSharedPtr.hpp  SharedPtr.cpp  SharedPtr.hpp  Traits.hpp  UniquePtr.hpp  _RationalAndSwap.hpp
MCF/Socket/: PeerInfo.cpp  PeerInfo.hpp  TcpPeer.cpp  TcpPeer.hpp  TcpServer.cpp  TcpServer.hpp  UdpPacket.cpp  UdpPacket.hpp  UdpSender.cpp  UdpSender.hpp  UdpServer.cpp  UdpServer.hpp  _SocketUtils.hpp
MCF/Storage/: Serializer.cpp  Serializer.hpp  VarIntEx.hpp
MCF/StreamFilters/: AbstractInputStreamFilter.cpp  AbstractInputStreamFilter.hpp  AbstractOutputStreamFilter.cpp  AbstractOutputStreamFilter.hpp  Base64.cpp  Base64.hpp  Base64Filters.cpp  Base64Filters.hpp  Base64InputStreamFilter.cpp  Base64InputStreamFilter.hpp  Base64OutputStreamFilter.cpp  Base64OutputStreamFilter.hpp  BufferingInputStreamFilter.cpp  BufferingInputStreamFilter.hpp  BufferingOutputStreamFilter.cpp  BufferingOutputStreamFilter.hpp  Hex.cpp  Hex.hpp  HexFilters.cpp  HexFilters.hpp  IsaacEx.cpp  IsaacEx.hpp  IsaacExFilters.cpp  IsaacExFilters.hpp  Lzma.cpp  Lzma.hpp  LzmaFilters.cpp  LzmaFilters.hpp  RC4ExFilters.cpp  RC4ExFilters.hpp  StreamFilterBase.cpp  StreamFilterBase.hpp  TextInputStreamFilter.cpp  TextInputStreamFilter.hpp  TextOutputStreamFilter.cpp  TextOutputStreamFilter.hpp  ZLibFilters.cpp  ZLibFilters.hpp  Zlib.cpp  Zlib.hpp  (+4 more)
MCF/Streams/: AbstractInputStream.cpp  AbstractInputStream.hpp  AbstractInputStreamFilter.hpp  AbstractOutputStream.cpp  AbstractOutputStream.hpp  AbstractOutputStreamFilter.cpp  AbstractOutputStreamFilter.hpp  AbstractStreamFilters.cpp  AbstractStreamFilters.hpp  AbstractStreamSink.hpp  AbstractStreamSource.hpp  AbstractStreams.cpp  AbstractStreams.hpp  BufferInputStream.cpp  BufferInputStream.hpp  BufferOutputStream.cpp  BufferOutputStream.hpp  BufferStreamSink.hpp  BufferStreamSource.hpp  BufferStreams.cpp  BufferStreams.hpp  BufferingInputStreamFilter.cpp  BufferingInputStreamFilter.hpp  Crc32OutputStream.cpp  (+41 more)
MCFBuild 0.4 (incomplete)/: BUILDIT.sh  BUILD_DEBUG  BUILD_IT  BUILD_RELEASE  ConsoleOutput.cpp  ConsoleOutput.hpp  DependencyDatabase.cpp  DependencyDatabase.hpp  FileSystem.cpp  FileSystem.hpp  JobScheduler.cpp  JobScheduler.hpp  Localization.cpp  MCFBuild.mcfproj  MCFMain.cpp  Makefile.am  Makefile.in  Model.cpp  Model.hpp  ProjectFile.cpp  ProjectFile.hpp  Shell.cpp  build.sh  buildlite.sh  configure  configure.ac  libmcflite.lst  make.cmd
MCFCRT/: MCFBuild.mcfproj  MCFCRT.c  MCFCRT.h  Makefile.am  configure.ac
(+1529 files in other folders)
